[package]
name = "aoe2de_downloader"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = { version = "1.0.104", features = ["std"] }
tokio = { version = "1.30.0", features = ["full"] }
zip-extract = "0.1.2"
